# solana-indexer

./: .gitignore  Cargo.toml  README.md
apps/backfill/: Cargo.toml
apps/backfill/src/: config.rs  kafka.rs  main.rs  pipeline.rs  replay.rs  rpc.rs  types.rs
apps/decoder/: Cargo.toml
apps/decoder/src/: config.rs  decode.rs  dlq.rs  kafka.rs  main.rs  metrics.rs  rpc.rs  types.rs
apps/decoder/src/detectors/: mod.rs  raydium_v4.rs  raydium_v4_gold.rs
apps/decoder/src/sinks/: dex_swap.rs  mod.rs  swap.rs
apps/indexer/: Cargo.toml
apps/indexer/src/: main.rs
apps/streamer/: Cargo.toml
apps/streamer/src/: config.rs  kafka.rs  main.rs  metrics.rs  stream.rs
clickhouse/: 001_init_raw_txs.sql  002_dex_swaps.sql  004_swaps.sql  005_gold_swaps_v2.sql
crates/schema/: Cargo.toml
crates/schema/src/: alt_resolver.rs  dex_swap.rs  lib.rs  swap.rs  tx_facts.rs
crates/schema/tests/: alt_resolver_test.rs  gold_swap_tests.rs
crates/schema/tests/fixtures/: expected_legacy_raydium_swap.json  expected_multi_hop.json  expected_v0_raydium_swap.json  legacy_raydium_swap.json  legacy_raydium_swap_full.json  multi_hop_jupiter_raydium.json  v0_raydium_swap.json  v0_raydium_swap_full.json
docs/: ARCHITECTURE.md  RUNBOOK.md
infra/: docker-compose.yml
infra/clickhouse/: 003_decoder_tables.sql
scripts/: dev-down.sh  dev-up.sh
