[package]
name = "backfill"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"

rdkafka = { version = "0.36", features = ["tokio"] }
bs58 = "0.5"